--- a/WearML-Example/WearML-Example-Application/build.gradle
+++ b/WearML-Example/WearML-Example-Application/build.gradle
@@ -3,13 +3,11 @@
 buildscript {
     
     repositories {
-        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +15,6 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
     }
 }
