BNF Grammar Example
BNF Grammar example and TTS update

--- a/Developer-Examples/hmt1developerexamples/src/main/AndroidManifest.xml
+++ b/Developer-Examples/hmt1developerexamples/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".AudioCaptureActivity" />
         <activity android:name=".MicrophoneReleaseActivity" />
         <activity android:name=".ShowHelpActivity" />
+        <activity android:name=".BNFGrammarActivity" />
     </application>
 
 </manifest>
