Fix missing GitHub button on home page
This changeset fixed the missing GitHub button on the home page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: "realwear/GitHubPagesTheme@product"
 
-title: Developer Examples
+title: HMT-1 Developer Examples
 
 plugins:
   - jekyll-remote-theme
