- updated build tools - removed wrong layout file

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /build
 /captures
 .idea/
+Developer-Examples/build/
+Developer-Examples/hmt1developerexamples/build/
+Developer-Examples/local.properties
