--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 Developer-Examples/build/
 Developer-Examples/hmt1developerexamples/build/
 Developer-Examples/local.properties
+hmt1developerexamples/debug/
+hmt1developerexamples/release/
