--- a/hmt1developerexamples/build.gradle
+++ b/hmt1developerexamples/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.realwear.hmt1developerexamples"
         minSdkVersion 21
