--- a/hmt1developerexamples/src/main/AndroidManifest.xml
+++ b/hmt1developerexamples/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.realwear.hmt1developerexamples">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -12,18 +11,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".CameraVideoActivity" />
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
         <activity android:name=".ActionButtonActivity" />
-        <activity android:name=".CameraPhotoActivity" />
+        <activity android:name=".CameraActivity" />
         <activity android:name=".DocumentActivity" />
         <activity android:name=".MovieActivity" />
         <activity android:name=".BarcodeActivity" />
@@ -34,7 +32,6 @@
         <activity android:name=".MicrophoneReleaseActivity" />
         <activity android:name=".ShowHelpActivity" />
         <activity android:name=".BNFGrammarActivity" />
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
