--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Developer-Examples/hmt1developerexamples/build/
 Developer-Examples/local.properties
 hmt1developerexamples/debug/
 hmt1developerexamples/release/
+gradle/wrapper/gradle-wrapper.properties
