--- a/hmt1developerexamples/build.gradle
+++ b/hmt1developerexamples/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.realwear.hmt1developerexamples"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 130
-        versionName "1.3.0"
+        versionCode 1030100
+        versionName "1.3.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
