--- a/hmt1developerexamples/build.gradle
+++ b/hmt1developerexamples/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
@@ -28,4 +29,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.realwear:UXLibrary:v1.1.2.278'
+}
+repositories {
+    mavenCentral()
 }
