--- a/hmt1developerexamples/build.gradle
+++ b/hmt1developerexamples/build.gradle
@@ -18,10 +18,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    implementation 'com.android.databinding:viewbinding:7.1.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.core:core:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
